--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
   padding: 0;
 }
 
-
 header {
   height: 100vh;
   line-height: 15px;
@@ -34,7 +33,7 @@ header {
   height: 100%;
   justify-content: flex-start;
 }
-.main a{
+.main a {
   text-decoration: none;
   color: #000;
 }
@@ -77,11 +76,9 @@ a {
   padding: 10px 20px;
 }
 
-
-
-
-
-
+#fight-section {
+  display: none;
+}
 
 .register {
   display: flex;
