--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ a {
   border-radius: 15px;
   height: 350px;
   width: 300px;
+  position: relative;
 }
 
 .avatar-image img {
@@ -159,6 +160,35 @@ a {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+
+#edit-character {
+  display: none;
+}
+
+.edit-character {
+  align-items: center;
+  background: #ffffff80;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.edit-character-btn {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.edit-character-btn img {
+  font-size: 20px;
+  height: 20px;
+  width: 20px;
 }
 
 .avatar-result {
