--- a/styles.css
+++ b/styles.css
@@ -300,3 +300,100 @@ a {
   height: 24px;
   width: 24px;
 }
+
+#battle-section {
+  display: none;
+}
+
+.battle-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.battle-info {
+  flex: 1;
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.battle-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  gap: 20px;
+}
+.battle-item-name {
+  font-size: large;
+}
+
+.battle-item-image {
+  width: 100%;
+  height: 350px;
+}
+.health-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+}
+
+.progress-bar {
+  width: 100%;
+  background-color: red;
+  border-radius: 4px;
+  appearance: none;
+  border: none;
+  color: #14f0dd;
+  height: 15px;
+}
+.battle-controls > p {
+  margin: 0;
+}
+
+.battle-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.hr {
+  width: 1px;
+  background-color: gray;
+}
+
+.zones {
+  display: flex;
+  gap: 10px;
+}
+
+.attack-zones {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-end;
+}
+
+.defence-zones {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+}
+
+.btn-attack {
+  align-items: center;
+  border: 1px solid #000;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  justify-content: center;
+  padding: 10px 20px;
+}
