--- a/styles.css
+++ b/styles.css
@@ -396,6 +396,7 @@ a {
   font-size: 16px;
   justify-content: center;
   padding: 10px 20px;
+}
 /*-------------- settings ---------------------*/
 
 #settings-section {
